Início da criação do layout

--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
 
 <body>
   <main class="container">
-    <!-- CABEÇALHO COM FUNDO -->
-    <header>
+    <!-- FUNDO NAVEGAÇÃO -->
+    <div>
       <!-- NAVEGAÇÃO -->
       <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
         <a class="" href="index.html"><h1 class="">euCHICO</h1></a>
@@ -29,16 +29,92 @@
 
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="">sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>
+            <li class="nav-item"><a class="nav-link" href="">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
           </ul>
         </div>
       </nav>
       <!-- / NAVEGAÇÃO -->
+    </div>
+    <!-- / FUNDO NAVEGAÇÃO -->
 
-    </header>
-    <!-- CABEÇALHO COM FUNDO -->
+    <!-- SEÇÃO: POSTAGEM -->
+    <section>
+      <!-- POSTAGEM 1 -->
+      <div class="">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <hr>
+        <span>Lorem ipsum dolor</span>
+        <span>Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <hr>
+      </div>
+      <!-- / POSTAGEM 1 -->
+
+      <!-- POSTAGEM 2 -->
+      <div class="">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <hr>
+        <span>Lorem ipsum dolor</span>
+        <span>Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <hr>
+      </div>
+      <!-- / POSTAGEM 2 -->
+
+      <!-- POSTAGEM 3 -->
+      <div class="">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <hr>
+        <span>Lorem ipsum dolor</span>
+        <span>Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <hr>
+      </div>
+      <!-- / POSTAGEM 3 -->
+
+      <!-- POSTAGEM 4 -->
+      <div class="">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <hr>
+        <span>Lorem ipsum dolor</span>
+        <span>Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <hr>
+      </div>
+      <!-- / POSTAGEM 4 -->
+
+      <!-- POSTAGEM 5 -->
+      <div class="">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <hr>
+        <span>Lorem ipsum dolor</span>
+        <span>Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <!-- / POSTAGEM 5 -->
+    </section>
+    <!-- / SEÇÃO: POSTAGEM -->
+
+    <!-- RODAPÉ -->
+    <footer>
+      <hr>
+
+      <span>euchico</span>
+      <hr>
+      <span>email@email.com</span>
+      <div class="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </footer>
+    <!-- / RODAPÉ -->
   </main>
 
   <!-- SCRIPTs -->
