--- a/index.html
+++ b/index.html
@@ -17,29 +17,89 @@
 
 <body>
   <main class="container">
-    <!-- CABEÇALHO SIMPLES -->
+    <!-- NAVEGAÇÃO -->
+    <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
+      <a class="" href=""><h1 class=""><span>euCHICO</span></h1></a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- / NAVEGAÇÃO -->
+
+    <!-- CABEÇALHO -->
     <header>
-      <!-- NAVEGAÇÃO -->
-      <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
-        <a class="" href=""><h1 class="">euCHICO</h1></a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
-          </ul>
+      <div class="row">
+        <div class="col-8">
+          <h2>Francisco de Paula</h2>
+          <h3>Desenvolvedor Web</h3>
+          <hr>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </span>
         </div>
-      </nav>
-      <!-- / NAVEGAÇÃO -->
+
+        <div class="col-4">
+          <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M200 100C200 155.228 155.228 200 100 200C44.7715 200 0 155.228 0 100C0 44.7715 44.7715 0 100 0C155.228 0 200 44.7715 200 100Z" fill="#808080"/>
+          </svg>
+        </div>
+      </div>
+
+      <hr>
 
     </header>
-    <!-- / CABEÇALHO SIMPLES -->
+    <!-- / CABEÇALHO ÁREA -->
 
+    <!-- SEÇÃO: PORTFÓLIO -->
+    <section class="row">
+      <div class="col-6">
+        Trabalho 1
+      </div>
+
+      <div class="col-6">
+        Trabalho 2
+      </div>
+
+      <div class="col-12">
+        Trabalho 3
+      </div>
+
+      <div class="col-4">
+        Trabalho 4
+      </div>
+
+      <div class="col-4">
+        Trabalho 5
+      </div>
+
+      <div class="col-4">
+        Trabalho 6
+      </div>
+    </section>
+    <!-- / SEÇÃO: PORTFÓLIO -->
+
+    <!-- RODAPÉ -->
+    <footer>
+      <hr>
+
+      <span>euchico</span>
+      <hr>
+      <span>email@email.com</span>
+      <div class="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </footer>
+    <!-- / RODAPÉ -->
   </main>
 
   <!-- SCRIPTs -->
