--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
 
 <body>
   <main class="container">
-    <!-- CABEÇALHO COM FUNDO -->
-    <header>
+    <!-- FUNDO NAVEGAÇÃO -->
+    <div>
       <!-- NAVEGAÇÃO -->
       <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
         <a class="" href="index.html"><h1 class="">euCHICO</h1></a>
@@ -36,9 +36,10 @@
         </div>
       </nav>
       <!-- / NAVEGAÇÃO -->
+    </div>
+    <!-- / FUNDO NAVEGAÇÃO -->
 
-    </header>
-    <!-- CABEÇALHO COM FUNDO -->
+    
   </main>
 
   <!-- SCRIPTs -->
