--- a/sobre.html
+++ b/sobre.html
@@ -17,8 +17,8 @@
 
 <body>
   <main class="container">
-    <!-- CABEÇALHO COM FUNDO -->
-    <header>
+    <!-- FUNDO NAVEGAÇÃO -->
+    <div>
       <!-- NAVEGAÇÃO -->
       <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
         <a class="" href="index.html"><h1 class="">euCHICO</h1></a>
@@ -36,9 +36,93 @@
         </div>
       </nav>
       <!-- / NAVEGAÇÃO -->
+    </div>
+    <!-- / FUNDO NAVEGAÇÃO -->
 
-    </header>
-    <!-- CABEÇALHO COM FUNDO -->
+    <!-- SEÇÃO: BIOGRAFIA -->
+    <section>
+      <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M200 100C200 155.228 155.228 200 100 200C44.7715 200 0 155.228 0 100C0 44.7715 44.7715 0 100 0C155.228 0 200 44.7715 200 100Z" fill="#808080"/>
+      </svg>
+
+      <h3>Francisco de Paula</h3>
+
+      <hr>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <!-- PORTFÓLIO -->
+      <div class="row">
+        <div class="col-4">
+          Trabalho 1
+        </div>
+
+        <div class="col-4">
+          Trabalho 2
+        </div>
+
+        <div class="col-4">
+          Trabalho 3          Trabalho 2
+        </div>
+
+        <div class="col-4">
+          Trabalho 3
+        </div>
+      </div>
+        </div>
+      </div>
+      <!-- / PORTFÓLIO -->
+    </section>
+    <!-- / SEÇÃO: BIOGRAFIA -->
+
+    <!-- SEÇÃO: MATEMÁTICA -->
+    <section>
+      <h3> Matemática</h3>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <img src="" alt="">
+    </section>
+    <!-- / SEÇÃO: MATEMÁTICA -->
+
+    <!-- SEÇÃO: ARTE -->
+    <section>
+      <h3>Arte</h3>
+
+      <hr>
+
+      <div class="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+
+      <div class="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </section>
+    <!-- / SEÇÃO: ARTE -->
+
+    <!-- RODAPÉ -->
+    <footer>
+      <hr>
+
+      <span>euchico</span>
+      <hr>
+      <span>email@email.com</span>
+      <div class="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </footer>
+    <!-- / RODAPÉ -->
   </main>
 
   <!-- SCRIPTs -->
