--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<!-- METAs -->
+	<!-- METAS -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- / METAs -->
+  <!-- / METAS -->
 
-	<!-- STYLEs -->
+	<!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <!-- / STYLEs -->
+  <!-- / ESTILOS -->
+
+  <!-- FONTE -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <!-- / FONTE -->
+
+  <!-- SCRIPTS -->
+  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous"></script>
+  <!-- SCRIPTS -->
 
   <title>euCHICO - Francisco de Paula</title>
 <head>
@@ -18,70 +26,98 @@
 <body>
   <main class="container">
     <!-- NAVEGAÇÃO -->
-    <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
-      <a class="" href=""><h1 class=""><span>euCHICO</span></h1></a>
+    <nav id="navagation" class="navbar navbar-expand-sm">
+      <a class="" href=""> <h1> <span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span></h1></a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="navbar-collapse collapse" id="collapsingNavbar">
+      <div id="collapsingNavbar" class="navbar-collapse collapse ">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
+          <li class="nav-item"><a class="nav-link txt-up color-nv1" href="sobre.html">sobre</a></li>
+          <li class="nav-item"><a class="nav-link txt-up color-nv1" href="blog.html">blog</a></li>
+          <li class="nav-item"><a class="nav-link txt-bold txt-up color-nv1" href="curriculo.html">currículo</a></li>
         </ul>
       </div>
     </nav>
     <!-- / NAVEGAÇÃO -->
 
-    <!-- CABEÇALHO -->
+    <!-- CABEÇALHO DESKTOP -->
     <header>
-
       <div class="row">
-        <div class="col-8">
-          <h2>Francisco de Paula</h2>
-          <h3>Desenvolvedor Web</h3>
-          <hr>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </span>
+        <div class="col-md-7">
+          <span class="title txt-up">Francisco de Paula</span>
+          <span class="subtitle" >Desenvolvedor Web</span>
+          <hr class="hr-tipo2 color-nv4">
+          <span class="description txt-featured">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </span>
         </div>
 
-        <div class="col-4">
-          <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M200 100C200 155.228 155.228 200 100 200C44.7715 200 0 155.228 0 100C0 44.7715 44.7715 0 100 0C155.228 0 200 44.7715 200 100Z" fill="#808080"/>
-          </svg>
+        <div class="col-md-5">
+          <img src="images/profile.png">
         </div>
       </div>
-
-      <hr>
-
     </header>
-    <!-- / CABEÇALHO ÁREA -->
+
+    <hr class="hr-tipo1 color-nv4">
+    <!-- / CABEÇALHO DESKTOP -->
 
     <!-- SEÇÃO: PORTFÓLIO -->
-    <section class="row">
-      <div class="col-6">
-        Trabalho 1
-      </div>
+    <section id="sec-home-portfolio" class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
 
-      <div class="col-6">
-        Trabalho 2
-      </div>
+        <div class="col-md-6 m-adjust-mobile">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a> 
+        </div>
 
-      <div class="col-12">
-        Trabalho 3
-      </div>
+        <div class="col-md-12">
+          <a href="">
+            <div class="col-md-12 job job-type2">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
 
-      <div class="col-4">
-        Trabalho 4
-      </div>
+        <div class="col-md-4">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
 
-      <div class="col-4">
-        Trabalho 5
-      </div>
+        <div class="col-md-4 m-adjust-mobile">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
 
-      <div class="col-4">
-        Trabalho 6
+        <div class="col-md-4 m-adjust-mobile">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
     <!-- / SEÇÃO: PORTFÓLIO -->
@@ -90,7 +126,7 @@
     <footer>
       <hr>
 
-      <span>euchico</span>
+      <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
       <hr>
       <span>email@email.com</span>
       <div class="">
@@ -102,9 +138,10 @@
     <!-- / RODAPÉ -->
   </main>
 
-  <!-- SCRIPTs -->
+  <!-- SCRIPTS -->
 	<script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-	<!-- / SCRIPTs -->
+  <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+  <script type="text/javascript" src="scripts/script.js"></script>
+	<!-- / SCRIPTS -->
 </body>
 </html>
