Finalização do layout da Home

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="col-md-7">
           <span class="title txt-up">Francisco de Paula</span>
           <span class="subtitle" >Desenvolvedor Web</span>
-          <hr class="hr-tipo2 color-nv4">
+          <hr class="hr-type2 color-nv4">
           <span class="description txt-featured">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </span>
         </div>
 
@@ -59,80 +59,96 @@
       </div>
     </header>
 
-    <hr class="hr-tipo1 color-nv4">
+    <hr class="hr-type1 color-nv4">
     <!-- / CABEÇALHO DESKTOP -->
 
     <!-- SEÇÃO: PORTFÓLIO -->
     <section id="sec-home-portfolio" class="container">
       <div class="row">
+        <!-- TRABALHO 1 -->
         <div class="col-md-6">
           <a href="">
             <div class="col-md-12 job job-type1">
               <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
             </div>
           </a>
         </div>
+        <!-- / TRABALHO 1 -->
 
+        <!-- TRABALHO 2 -->
         <div class="col-md-6 m-adjust-mobile">
           <a href="">
             <div class="col-md-12 job job-type1">
               <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
             </div>
           </a> 
         </div>
+        <!-- / TRABALHO 2 -->
+      </div>
 
+      <div class="row">
+        <!-- TRABALHO 3 -->
         <div class="col-md-12">
           <a href="">
             <div class="col-md-12 job job-type2">
               <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-4">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-4 m-adjust-mobile">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-4 m-adjust-mobile">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-type">Lorem/Ipsum</div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
             </div>
           </a>
         </div>
       </div>
+      <!-- / TRABALHO 3 -->
+
+      <div class="row hidden-mobile">
+        <!-- TRABALHO 4 -->
+        <div class="col-md-4">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
+        <!-- / TRABALHO 4 -->
+
+        <!-- TRABALHO 5 -->
+        <div class="col-md-4 m-adjust-mobile">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
+        <!-- / TRABALHO 5 -->
+
+        <!-- TRABALHO 6 -->
+        <div class="col-md-4 m-adjust-mobile">
+          <a href="">
+            <div class="col-md-12 job job-type1">
+              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+            </div>
+          </a>
+        </div>
+        <!-- / TRABALHO 6 -->
+      </div>  
     </section>
     <!-- / SEÇÃO: PORTFÓLIO -->
 
     <!-- RODAPÉ -->
     <footer>
-      <hr>
+      <hr class="hr-type1 color-nv4">
 
       <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
-      <hr>
-      <span>email@email.com</span>
-      <div class="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+      <hr class="hr-type2 color-nv4">
+      <span class="email color-nv1">eu.francisco@outlook.com</span>
+      <div class="social">          
+        <a href=""><img src="images/social-github.png"></a>
+        <a href=""><img src="images/social-mastodon.png" alt=""></a>
+        <a href=""><img src="images/social-linkedin.png" alt=""></a>
       </div>
     </footer>
     <!-- / RODAPÉ -->
