Layout das páginas Sobre e Blog

--- a/index.html
+++ b/index.html
@@ -24,135 +24,135 @@
 <head>
 
 <body>
-  <main class="container">
-    <!-- NAVEGAÇÃO -->
-    <nav id="navagation" class="navbar navbar-expand-sm">
-      <a class="" href=""> <h1> <span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span></h1></a>
+  <!-- NAVEGAÇÃO -->
+  <nav id="navagation" class="container navbar navbar-expand-sm">
+    <a href="">
+      <h1><span class="logo-part1 color-nv3">eu</span><span class="logo-part2 color-nv1">CHICO</span></h1>
+    </a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div id="collapsingNavbar" class="navbar-collapse collapse ">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link txt-up color-nv1" href="sobre.html">sobre</a></li>
-          <li class="nav-item"><a class="nav-link txt-up color-nv1" href="blog.html">blog</a></li>
-          <li class="nav-item"><a class="nav-link txt-bold txt-up color-nv1" href="curriculo.html">currículo</a></li>
-        </ul>
+    <div id="collapsingNavbar" class="navbar-collapse collapse ">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item color-nv1"><a class="nav-link txt-up " href="sobre.html">sobre</a></li>
+        <li class="nav-item color-nv1"><a class="nav-link txt-up " href="blog.html">blog</a></li>
+        <li class="nav-item color-nv1"><a class="nav-link txt-bold txt-up " href="curriculo.html">currículo</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- / NAVEGAÇÃO -->
+
+  <!-- CABEÇALHO -->
+  <header class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h2 class="color-nv1">Francisco de Paula</h2>
+        <h3 class="color-nv2">Desenvolvedor Web</h3>
+        <hr class="hr-type1 color-nv4">
+        <p class="txt-featured color-nv2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </p>
       </div>
-    </nav>
-    <!-- / NAVEGAÇÃO -->
 
-    <!-- CABEÇALHO DESKTOP -->
-    <header>
-      <div class="row">
-        <div class="col-md-7">
-          <span class="title txt-up">Francisco de Paula</span>
-          <span class="subtitle" >Desenvolvedor Web</span>
-          <hr class="hr-type2 color-nv4">
-          <span class="description txt-featured">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis arcu arcu, egestas et lectus non, porta convallis turpis. Sed mollis nisi id nibh porttitor facilisis. </span>
-        </div>
-
-        <div class="col-md-5">
-          <img src="images/profile.png">
-        </div>
+      <div class="col-md-5">
+        <img class="img-profile" src="images/profile.png">
       </div>
-    </header>
+    </div>
 
+    <hr class="hr-type2 color-nv4">
+  </header>
+  <!-- / CABEÇALHO -->
+
+  <!-- SEÇÃO: PORTFÓLIO -->
+  <section class="container">
+    <div class="row">
+      <!-- TRABALHO 1 -->
+      <div class="col-md-6">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+      <!-- / TRABALHO 1 -->
+
+      <!-- TRABALHO 2 -->
+      <div class="col-md-6 m-adjust-mobile">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a> 
+      </div>
+      <!-- / TRABALHO 2 -->
+    </div>
+
+    <div class="row">
+      <!-- TRABALHO 3 -->
+      <div class="col-md-12">
+        <a href="">
+          <div class="col-md-12 job job-type2">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <!-- / TRABALHO 3 -->
+
+    <div class="row hidden-mobile">
+      <!-- TRABALHO 4 -->
+      <div class="col-md-4">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+      <!-- / TRABALHO 4 -->
+
+      <!-- TRABALHO 5 -->
+      <div class="col-md-4 m-adjust-mobile">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+      <!-- / TRABALHO 5 -->
+
+      <!-- TRABALHO 6 -->
+      <div class="col-md-4 m-adjust-mobile">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+      <!-- / TRABALHO 6 -->
+    </div>  
+  </section>
+  <!-- / SEÇÃO: PORTFÓLIO -->
+
+  <!-- RODAPÉ -->
+  <footer class="container">
+    <hr class="hr-type2 color-nv4">
+
+    <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
     <hr class="hr-type1 color-nv4">
-    <!-- / CABEÇALHO DESKTOP -->
-
-    <!-- SEÇÃO: PORTFÓLIO -->
-    <section id="sec-home-portfolio" class="container">
-      <div class="row">
-        <!-- TRABALHO 1 -->
-        <div class="col-md-6">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-        <!-- / TRABALHO 1 -->
-
-        <!-- TRABALHO 2 -->
-        <div class="col-md-6 m-adjust-mobile">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a> 
-        </div>
-        <!-- / TRABALHO 2 -->
-      </div>
-
-      <div class="row">
-        <!-- TRABALHO 3 -->
-        <div class="col-md-12">
-          <a href="">
-            <div class="col-md-12 job job-type2">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <!-- / TRABALHO 3 -->
-
-      <div class="row hidden-mobile">
-        <!-- TRABALHO 4 -->
-        <div class="col-md-4">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-        <!-- / TRABALHO 4 -->
-
-        <!-- TRABALHO 5 -->
-        <div class="col-md-4 m-adjust-mobile">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-        <!-- / TRABALHO 5 -->
-
-        <!-- TRABALHO 6 -->
-        <div class="col-md-4 m-adjust-mobile">
-          <a href="">
-            <div class="col-md-12 job job-type1">
-              <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
-              <div class="job-btn job-btn-category">Lorem/Ipsum</div>
-            </div>
-          </a>
-        </div>
-        <!-- / TRABALHO 6 -->
-      </div>  
-    </section>
-    <!-- / SEÇÃO: PORTFÓLIO -->
-
-    <!-- RODAPÉ -->
-    <footer>
-      <hr class="hr-type1 color-nv4">
-
-      <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
-      <hr class="hr-type2 color-nv4">
-      <span class="email color-nv1">eu.francisco@outlook.com</span>
-      <div class="social">          
-        <a href=""><img src="images/social-github.png"></a>
-        <a href=""><img src="images/social-mastodon.png" alt=""></a>
-        <a href=""><img src="images/social-linkedin.png" alt=""></a>
-      </div>
-    </footer>
-    <!-- / RODAPÉ -->
-  </main>
+    <span class="email color-nv1">eu.francisco@outlook.com</span>
+    <div class="social">          
+      <a href=""><img src="images/social-github.png"></a>
+      <a href=""><img src="images/social-mastodon.png" alt=""></a>
+      <a href=""><img src="images/social-linkedin.png" alt=""></a>
+    </div>
+  </footer>
+  <!-- / RODAPÉ -->
 
   <!-- SCRIPTS -->
 	<script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
