--- a/sobre.html
+++ b/sobre.html
@@ -6,128 +6,157 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- / METAs -->
 
-	<!-- STYLEs -->
+	<!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <!-- / STYLEs -->
+  <!-- / ESTILOS -->
+
+  <!-- FONTE -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <!-- / FONTE -->
+
+  <!-- SCRIPTS -->
+  <script src="https://kit.fontawesome.com/2afad5831f.js" crossorigin="anonymous"></script>
+  <!-- SCRIPTS -->
 
   <title>euCHICO - Sobre</title>
 <head>
 
 <body>
-  <main class="container">
-    <!-- FUNDO NAVEGAÇÃO -->
-    <div>
-      <!-- NAVEGAÇÃO -->
-      <nav class="navbar navbar-expand-sm navbar-light" id="navagation">
-        <a class="" href="index.html"><h1 class="">euCHICO</h1></a>
+  <!-- FUNDO NAVEGAÇÃO -->
+  <div class="bg-navagation bg-color-nv2">
+    <!-- NAVEGAÇÃO -->
+    <nav id="navagation" class="container navbar navbar-expand-sm">
+      <a href="index.html"><h1><span class="logo-part1 color-nv4">eu</span><span class="logo-part2 color-nv5">CHICO</span></h1></a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="">sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
-          </ul>
-        </div>
-      </nav>
-      <!-- / NAVEGAÇÃO -->
+      <div id="collapsingNavbar" class="navbar-collapse collapse ">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="">sobre</a></li>
+          <li class="nav-item color-nv5"><a class="nav-link txt-up" href="blog.html">blog</a></li>
+          <li class="nav-item color-nv5"><a class="nav-link txt-bold txt-up" href="curriculo.html">currículo</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- / NAVEGAÇÃO -->
+  </div>
+  <!-- / FUNDO NAVEGAÇÃO -->
+
+  <!-- SEÇÃO: BIOGRAFIA -->
+  <section id="sec-biography" class="container">
+    <div class="text-center">
+      <img class="img-profile" src="images/profile.png">
+
+      <h3 class="color-nv1">Francisco de Paula</h3>
+
+      <hr class="hr-type1 color-nv4">
     </div>
-    <!-- / FUNDO NAVEGAÇÃO -->
 
-    <!-- SEÇÃO: BIOGRAFIA -->
-    <section>
-      <svg width="200" height="200" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M200 100C200 155.228 155.228 200 100 200C44.7715 200 0 155.228 0 100C0 44.7715 44.7715 0 100 0C155.228 0 200 44.7715 200 100Z" fill="#808080"/>
-      </svg>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-      <h3>Francisco de Paula</h3>
-
-      <hr>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <!-- PORTFÓLIO -->
-      <div class="row">
-        <div class="col-4">
-          Trabalho 1
-        </div>
-
-        <div class="col-4">
-          Trabalho 2
-        </div>
-
-        <div class="col-4">
-          Trabalho 3          Trabalho 2
-        </div>
-
-        <div class="col-4">
-          Trabalho 3
-        </div>
+    <!-- PORTFÓLIO -->
+    <div class="row">
+      <!-- TRABALHO 4 -->
+      <div class="col-md-4">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
       </div>
-        </div>
+      <!-- / TRABALHO 4 -->
+
+      <!-- TRABALHO 5 -->
+      <div class="col-md-4 m-adjust-mobile">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
       </div>
-      <!-- / PORTFÓLIO -->
+      <!-- / TRABALHO 5 -->
+
+      <!-- TRABALHO 6 -->
+      <div class="col-md-4 m-adjust-mobile">
+        <a href="">
+          <div class="col-md-12 job job-type1">
+            <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
+            <div class="job-btn job-btn-category">Lorem/Ipsum</div>
+          </div>
+        </a>
+      </div>
+      <!-- / TRABALHO 6 -->
+    </div> 
+    <!-- / PORTFÓLIO -->
+  </section>
+  <!-- / SEÇÃO: BIOGRAFIA -->
+
+  <!-- SEÇÃO: MATEMÁTICA -->
+  <div class="sec-featured bg-color-nv3">
+    <section id="sec-math" class="container text-center">
+      <h3 class="color-nv5">Matemática</h3>
+      <hr class="hr-type1 color-nv4">
+      <p class="text-left w-75 mx-auto color-nv5">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+      <a href=""><img src="images/logo-ifrj.png"></a>
     </section>
-    <!-- / SEÇÃO: BIOGRAFIA -->
+  </div>
+  <!-- / SEÇÃO: MATEMÁTICA -->
 
-    <!-- SEÇÃO: MATEMÁTICA -->
-    <section>
-      <h3> Matemática</h3>
-      <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <img src="" alt="">
-    </section>
-    <!-- / SEÇÃO: MATEMÁTICA -->
+  <!-- SEÇÃO: ARTE -->
+  <section id="sec-art" class="container text-center">
+    <h3 class="color-nv2">Arte</h3>
 
-    <!-- SEÇÃO: ARTE -->
-    <section>
-      <h3>Arte</h3>
+    <hr class="hr-type1 color-nv4">
 
-      <hr>
+    <div class="social">          
+      <a href=""><img src="images/social-instagram.png"></a>
+      <a href=""><img src="images/social-artstation.png" alt=""></a>
+      <a href=""><img src="images/social-twitter.png" alt=""></a>
+    </div>
 
-      <div class="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-      </div>
+    <div class="row gallery">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+    </div>
 
-      <div class="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+    <div class="row gallery hidden-mobile">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+      <img class="col-sm-4 img-fluid" src="images/arte.png">
+    </div>
+  </section>
+  <!-- / SEÇÃO: ARTE -->
 
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-      </div>
-    </section>
-    <!-- / SEÇÃO: ARTE -->
+  <!-- RODAPÉ -->
+  <footer class="container">
+    <hr class="hr-type2 color-nv4">
 
-    <!-- RODAPÉ -->
-    <footer>
-      <hr>
+    <span class="logo-part1 txt-size4 color-nv3">eu</span><span class="logo-part2 txt-size4 color-nv1">CHICO</span>
+    <hr class="hr-type1 color-nv4">
+    <span class="email color-nv1">eu.francisco@outlook.com</span>
+    <div class="social">          
+      <a href=""><img src="images/social-github.png"></a>
+      <a href=""><img src="images/social-mastodon.png" alt=""></a>
+      <a href=""><img src="images/social-linkedin.png" alt=""></a>
+    </div>
+  </footer>
+  <!-- / RODAPÉ -->
 
-      <span>euchico</span>
-      <hr>
-      <span>email@email.com</span>
-      <div class="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-      </div>
-    </footer>
-    <!-- / RODAPÉ -->
-  </main>
-
-  <!-- SCRIPTs -->
+  <!-- SCRIPTS -->
 	<script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-	<!-- / SCRIPTs -->
+  <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+  <script type="text/javascript" src="scripts/script.js"></script>
+	<!-- / SCRIPTS -->
 </body>
 </html>
