--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
   <!-- / FUNDO NAVEGAÇÃO -->
 
   <!-- SEÇÃO: POSTAGEM -->
-  <section class="container text-center">
+  <section id="sec-blog" class="container text-center">
     <!-- POSTAGEM 1 -->
     <div class="row justify-content-center">
       <div class="col-md-8">
