--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
   <section class="container">
     <div class="row">
       <!-- TRABALHO 1 -->
-      <div class="col-md-6">
+      <div class="col-md-6" >
         <a href="">
-          <div class="col-md-12 job job-type1">
+          <!-- <div class="col-md-12 job job-type1" style="background:transparent url('images/trabalho-1.png') no-repeat center center /cover"> -->
+          <div class="col-md-12 job job-type1" >
             <div class="job-btn job-btn-link"><i class="fas fa-angle-right icon"></i></div>
             <div class="job-btn job-btn-category">Lorem/Ipsum</div>
           </div>
